# agente-copago

./: .gitignore  check_notion.py  package-lock.json  package.json
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agent/: __init__.py  copay_agent.py
backend/app/agent/prompts/: system_prompt.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: chat.py  estimate.py  telegram.py  whatsapp.py
backend/app/core/: config.py
backend/app/integrations/: notion.py
backend/app/schemas/: patient.py
backend/app/services/: hospital_network.py  insurance.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/pages/: ChatPage.tsx  HomePage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
