[project]
name = "copay-estimator-backend"
version = "0.1.0"
description = "Backend FastAPI — estimador agéntico de copago"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic-settings>=2.6.0",
  "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
